syntax = "proto3";

package rpc;

option go_package = "../gRPC/user";

service UserService {
    rpc GetAuthors(ListAuthorRequest) returns (ListAuthorReply);
}

message AccessToken {
    string access_token = 1;
}

message Credentials {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string status = 1;
    AccessToken data = 2;
}

message Author {
    int32 id = 1;
    string usename = 2;
    string email = 3;
    string bio = 4;
    string image = 5;
}

message ListAuthorRequest {
    string keyword = 1;
}

message ListAuthorReply {
    string status = 1;
    int32 total = 2;
    repeated Author authors = 3;
}
